Custom--app/main/default/objects/Acq_Budget_Walk__c/Acq_Budget_Walk__c.object-meta.xml
<CustomObject>
    <label>Acq Budget Walk</label>
    <nameField>
        <displayFormat>BW-{00000}</displayFormat>
        <label>Budget Walk ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acq Budget Walks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>