Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Accepted_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Contract_Price__c</fullName>
    <formula>Prospect_ID__r.Accepted_Contract_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Contract Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>