Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipName>Budget_Walks</relationshipName>
    <type>Lookup</type>
</CustomField>