Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Analyst_IMG__c.field-meta.xml
<CustomField>
    <fullName>Analyst_IMG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analyst IMG</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Acq_Budget_Walks</relationshipName>
    <type>Lookup</type>
</CustomField>