Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <formula>Prospect_ID__r.Baths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bathrooms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>