Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <formula>Prospect_ID__r.Bedrooms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bedrooms</label>
    <type>Text</type>
</CustomField>