Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Broker_User__c.field-meta.xml
<CustomField>
    <fullName>Broker_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Acq_Budget_Walks1</relationshipName>
    <type>Lookup</type>
</CustomField>