Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>Budget_Status__c</fullName>
    <formula>BW_Estimator_Link__r.Budget_Status__c</formula>
    <label>Budget Status</label>
    <type>Text</type>
</CustomField>