Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/BW_Estimator_Link__c.field-meta.xml
<CustomField>
    <fullName>BW_Estimator_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BW Estimator Link</label>
    <referenceTo>HD_Budget_Walk__c</referenceTo>
    <relationshipLabel>Acq Budget Walks</relationshipLabel>
    <relationshipName>Acq_Budget_Walks</relationshipName>
    <type>Lookup</type>
</CustomField>