Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Cap_Rate_UW__c.field-meta.xml
<CustomField>
    <fullName>Cap_Rate_UW__c</fullName>
    <formula>IF(
					ISNULL(PipelineID__r.Cost_Basis_Est__c),
     Prospect_ID__r.Cap_Rate_UW__c,
					PipelineID__r.Cap_Rate_UW__c
					)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cap Rate @ UW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>