Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Construction_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Construction_Supervisor__c</fullName>
    <formula>BW_Estimator_Link__r.Approval_Supervisor__r.Full_Name__c</formula>
    <label>Construction Supervisor</label>
    <type>Text</type>
</CustomField>