Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Cost_Basis_Est_UW__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basis_Est_UW__c</fullName>
    <formula>IF( 
				OR(
								ISBLANK(PipelineID__r.Cost_Basis_Est__c),ISNULL(PipelineID__r.Cost_Basis_Est__c)
				),
				Prospect_ID__r.Cost_Basis_Est_UW__c,
				PipelineID__r.Cost_Basis_Est__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Basis Est @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>