Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>Prospect_ID__r.County__c</formula>
    <label>County</label>
    <type>Text</type>
</CustomField>