Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Director_IMG__c.field-meta.xml
<CustomField>
    <fullName>Director_IMG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director IMG</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_Walks5</relationshipName>
    <type>Lookup</type>
</CustomField>