Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/doBudget_Finalized__c.field-meta.xml
<CustomField>
    <fullName>doBudget_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doBudget Finalized</label>
    <type>Checkbox</type>
</CustomField>