Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/doBudgetApproved__c.field-meta.xml
<CustomField>
    <fullName>doBudgetApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doBudgetApproved</label>
    <type>Checkbox</type>
</CustomField>