Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/doCompleteWalk__c.field-meta.xml
<CustomField>
    <fullName>doCompleteWalk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doCompleteWalk</label>
    <type>Checkbox</type>
</CustomField>