Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Drive_Notes__c.field-meta.xml
<CustomField>
    <fullName>Drive_Notes__c</fullName>
    <label>Drive Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>