Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Expected_Gross_Monthly_Rent_UW__c.field-meta.xml
<CustomField>
    <fullName>Expected_Gross_Monthly_Rent_UW__c</fullName>
    <formula>Prospect_ID__r.Expected_Gross_Monthly_Rent_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Gross Monthly Rent @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>