Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/HOA_Name_UW__c.field-meta.xml
<CustomField>
    <fullName>HOA_Name_UW__c</fullName>
    <formula>Prospect_ID__r.HOA_Name_UW__c</formula>
    <label>HOA Name @ UW</label>
    <type>Text</type>
</CustomField>