Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/HVAC_Type__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Type__c</fullName>
    <formula>Prospect_ID__r.HVAC_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HVAC Type</label>
    <type>Text</type>
</CustomField>