Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Initial_Rehab_HVAC_Replace__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rehab_HVAC_Replace__c</fullName>
    <formula>Prospect_ID__r.Initial_Rehab_HVAC_Replace__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Rehab - HVAC Replace</label>
    <type>Checkbox</type>
</CustomField>