Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Initial_Rehab_Kitchen_Replace__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rehab_Kitchen_Replace__c</fullName>
    <formula>Prospect_ID__r.Initial_Rehab_Kitchen_Replace__c</formula>
    <label>Initial Rehab - Kitchen Replace</label>
    <type>Checkbox</type>
</CustomField>