Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Initial_Rehab_Scope_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rehab_Scope_Notes__c</fullName>
    <formula>Prospect_ID__r.Initial_Rehab_Scope_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Rehab Scope Notes</label>
    <type>Text</type>
</CustomField>