Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Inspection_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Period_End_Date__c</fullName>
    <formula>IF (ISBLANK(PipelineID__r.Inspection_Period_End_Date__c), Prospect_ID__r.Inspection_Period_End_Date__c,PipelineID__r.Inspection_Period_End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Period End Date</label>
    <type>Date</type>
</CustomField>