Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Location_Score__c.field-meta.xml
<CustomField>
    <fullName>Location_Score__c</fullName>
    <formula>Prospect_ID__r.Location_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>