Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Lot_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Lot_Sq_Ft__c</fullName>
    <formula>Prospect_ID__r.Lot_Sq_Ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lot Sq/Ft</label>
    <type>Text</type>
</CustomField>