Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Overall_Asset_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Asset_Score__c</fullName>
    <formula>Prospect_ID__r.Overall_Asset_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Asset Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>