Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <formula>Prospect_ID__r.Parking__c</formula>
    <label>Parking</label>
    <type>Text</type>
</CustomField>