Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/PipelineID__c.field-meta.xml
<CustomField>
    <fullName>PipelineID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline ID</label>
    <referenceTo>AcqPipeline__c</referenceTo>
    <relationshipLabel>Acq Budget Walks</relationshipLabel>
    <relationshipName>Budget_Walks</relationshipName>
    <type>Lookup</type>
</CustomField>