Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <formula>Prospect_ID__r.Pool__c</formula>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>