Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Property_Access_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Property_Access_Contact_Email__c</fullName>
    <formula>Prospect_ID__r.Property_Access_Contact_Email__c</formula>
    <label>Property Access Contact Email</label>
    <type>Text</type>
</CustomField>