Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Property_Score__c.field-meta.xml
<CustomField>
    <fullName>Property_Score__c</fullName>
    <formula>Prospect_ID__r.Property_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>