Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <formula>Prospect_ID__r.Property_Type__c</formula>
    <label>Property Type</label>
    <type>Text</type>
</CustomField>