Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Prospect_ID__c.field-meta.xml
<CustomField>
    <fullName>Prospect_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect ID</label>
    <referenceTo>Acq_Prospect__c</referenceTo>
    <relationshipName>Budget_Walks</relationshipName>
    <type>Lookup</type>
</CustomField>