Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Reduction_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Reduction_Amount_Requested__c</fullName>
    <label>Reduction Amount Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>