Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Reduction_Requested__c.field-meta.xml
<CustomField>
    <fullName>Reduction_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduction Requested</label>
    <type>Checkbox</type>
</CustomField>