Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>Revision_Date__c</fullName>
    <formula>BW_Estimator_Link__r.Revision_Date__c</formula>
    <label>Revision Date</label>
    <type>Date</type>
</CustomField>