Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Roof_Type__c.field-meta.xml
<CustomField>
    <fullName>Roof_Type__c</fullName>
    <formula>Prospect_ID__r.Roof_Type__c</formula>
    <label>Roof Type</label>
    <type>Text</type>
</CustomField>