Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
                <default>true</default>
                <label>Ordered</label>
            </value>
            <value>
                <fullName>Walk Scheduled</fullName>
            </value>
            <value>
                <fullName>Walk Complete</fullName>
            </value>
            <value>
                <fullName>Budget Submitted</fullName>
            </value>
            <value>
                <fullName>Budget Approved</fullName>
            </value>
            <value>
                <fullName>Reduction Requested</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>