Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Subdivision__c.field-meta.xml
<CustomField>
    <fullName>Subdivision__c</fullName>
    <formula>Prospect_ID__r.Subdivision__c</formula>
    <label>Subdivision</label>
    <type>Text</type>
</CustomField>