Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>Submarket__c</fullName>
    <formula>Prospect_ID__r.Submarket__c</formula>
    <label>Submarket</label>
    <type>Text</type>
</CustomField>