Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Submitted_Budget__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Budget__c</fullName>
    <formula>BW_Estimator_Link__r.Submitted_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>