Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/SVP_IMG_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>SVP_IMG_Approval_Date__c</fullName>
    <label>SVP IMG Approval Date</label>
    <type>Date</type>
</CustomField>