Custom--app/main/default/objects/Acq_Budget_Walk__c/fields/Walk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Walk_Notes__c</fullName>
    <label>Walk Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>