Custom--app/main/default/objects/Acq_Budget_Walk__c/validationRules/Budget_Walk_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Walk_Conversion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISBLANK(PipelineID__c),
				OR(
								doBudgetApproved__c = True, 
				    doBudget_Finalized__c = True, 
			    	doCompleteWalk__c = True,
			    	Reduction_Requested__c = True
				)
)</errorConditionFormula>
    <errorMessage>Please convert to Pipeline before proceeding with Budget Walk</errorMessage>
</ValidationRule>