Custom--app/main/default/objects/Acq_Budget_Walk__c/validationRules/Final_Budget_Before_Requesting_Reduction.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Budget_Before_Requesting_Reduction</fullName>
    <active>true</active>
    <description>Cannot request for reduction unless it is approved</description>
    <errorConditionFormula>AND(
					doBudget_Finalized__c = False,
	    Reduction_Requested__c = True
					)</errorConditionFormula>
    <errorMessage>Please submit a budget for approval before requesting a reduction.</errorMessage>
</ValidationRule>