Custom--app/main/default/objects/Acq_Budget_Walk__c/validationRules/Final_Budget_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Budget_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISBLANK( Director_Approval_Date__c )),
				ISCHANGED( Final_Rehab_Budget_Est_UW__c )
				)</errorConditionFormula>
    <errorMessage>Final Budget cannot be changed if the approval is done</errorMessage>
</ValidationRule>