Custom--app/main/default/objects/Acq_Budget_Walk__c/validationRules/Reduction_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Reduction_Error</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

								Reduction_Requested__c = true,
				OR(
								Reduction_Amount_Requested__c&lt;=0,
			    	ISNULL(Reduction_Amount_Requested__c)
								)
								)</errorConditionFormula>
    <errorMessage>Since a reduction is requested please fill in the Reduction Amount Requested</errorMessage>
</ValidationRule>