Custom--app/main/default/objects/Acq_Budget_Walk__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Complete_Address__c</columns>
    <columns>Cap_Rate_UW__c</columns>
    <columns>Director_Approval_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>